# youtube-dl-bot

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  compose.debug.yaml  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  template.py
.github/workflows/: codeql.yml  deploy.yml
api/: main.py
bot/: db.py  delete_temp.py  enums.py  find.py  host.py  keyboards.py  main.py  requirements.txt  tests.py
bot/handlers/: __init__.py  commands.py  common.py  downloader.py  find.py  funcs.py  standart.py  youtube_handlers.py
bot/handlers/modules/: __init__.py  master.py  pinterest.py  spotify.py  standart.py  template.py  tiktok.py  x.py  yandex_music.py  youtube.py  yt_music.py
nginx/: default.conf
src/: enums.py  handlers.py  main.py  utils.py
