[project]
name = "youtube-dl-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "anekobtw",email = "elmars0608@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiogram (>=3.29.0)",
    "python-dotenv (>=1.2.2)",
    "yt-dlp (>=2026.7.4)",
    "pillow (>=12.3.0,<13.0.0)",
    "youthon (>=0.5.0,<0.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
